// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(View) DogsBreedSearchView renders the component 1`] = `
<div
  className="mt-4"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="row"
    >
      <div
        className="col-md-10 search-input-section"
      >
        <input
          aria-describedby="dogs breed input search"
          className="search-input"
          onChange={[Function]}
          placeholder="Search for your favorite breed of dogs..."
          type="text"
          value=""
        />
      </div>
      <div
        className="col-md-2 search-button-section"
      >
        <Button
          className="search-button"
          size="sm"
          theme="primary"
          type="submit"
        >
          <Icon
            alt="search icon"
            className="mr-3 search-icon"
            icon="searchIcon"
          />
          <span
            className="search-message"
          >
            Search
          </span>
        </Button>
      </div>
    </div>
  </form>
</div>
`;

exports[`(View) DogsBreedSearchView renders the invalid search message 1`] = `
<div
  className="mt-4"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="row"
    >
      <div
        className="col-md-10 search-input-section"
      >
        <input
          aria-describedby="dogs breed input search"
          className="search-input"
          onChange={[Function]}
          placeholder="Search for your favorite breed of dogs..."
          type="text"
          value=""
        />
        <div
          className="invalid-search"
        >
          Sorry! We couldn't find the dog breed that you're looking for.
        </div>
      </div>
      <div
        className="col-md-2 search-button-section"
      >
        <Button
          className="search-button"
          size="sm"
          theme="primary"
          type="submit"
        >
          <Icon
            alt="search icon"
            className="mr-3 search-icon"
            icon="searchIcon"
          />
          <span
            className="search-message"
          >
            Search
          </span>
        </Button>
      </div>
    </div>
  </form>
</div>
`;
